SignUp Form Done

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,6 +5,16 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
+    <header>
+      <nav>
+        <a href="/">Home</a>
+        <a href="/get-started">Get Started</a>
+        <a href="/culture">Culture Awarness</a>
+        <a href="/how-to-get-around">How to get around</a>
+        <a href="/auth/signup">Sign Up</a>
+
+      </nav>
+    </header>
 
     {{{body}}}
 
