--- a/views/auth/account-details.hbs
+++ b/views/auth/account-details.hbs
@@ -3,4 +3,4 @@
 
 
 
-<a href="/auth/edit">Edit your profile</a>
+<button class="btn btn-outline-dark"><a href="/auth/edit">Edit your profile</a></button>
