--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,32 +1,48 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <header>
-      <nav>
+
+<head>
+  <title>{{title}}</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
+    crossorigin="anonymous">
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+</head>
+
+<body>
+  <header>
+    <nav>
+      <ul class="nav justify-content-center">
         {{#if activeUser.isAdmin}}
-        <a href="/admin">Admin</a>
-        {{/if}}
-        <a href="/">Home</a>
-        <a href="/get-started">Get Started</a>
-        <a href="/culture">Culture Awarness</a>
-        <a href="/how-to-get-around">How to get around</a>
-        <a href="/auth/signup">Sign Up</a>
+        <li>
+          <a href="/admin" class="nav-item">Admin</a>
+        </li>{{/if}}
+        <li class="nav-item">
+          <a href="/" class="nav-link">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="/get-started" class="nav-link">Get Started</a>
+        </li>
+        <li class="nav-item">
+          <a href="/culture" class="nav-link">Culture Awarness</a>
+        </li>
+        <li class="nav-item">
+          <a href="/how-to-get-around" class="nav-link">How to get around</a>
+        </li>
+      </ul>
+    </nav>
+    <div class="clearfix btns-login">
         {{#if theUser}}
-        <a href="/auth/account-details">See your profile</a>
-        <a href="/auth/logout">Log out</a>
-        {{else}}
-        <a href="/auth/login">Log in</a>
-        {{/if}}
+          <button class="btn float-right btn-info"><a href="/auth/account-details">See your profile</a></button>
+          <button class="btn float-right btn-info"><a href="/auth/logout">Log out</a></button>{{else}}
+          <button class="btn float-right btn-info"><a href="/auth/signup">Sign Up</a></button>
+          <button class="btn float-right btn-info"><a href="/auth/login">Log in</a></button>{{/if}}
+    </div>
 
-      </nav>
-    </header>
+  </header>
+<div class="cloud">
+  {{{body}}}
+</div>
+  <script src='/javascripts/script.js'></script>
+</body>
 
-    {{{body}}}
-
-    <script src='/javascripts/script.js'></script>
-  </body>
 </html>
