Still working on the admin, not working yet

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,7 +7,7 @@
   <body>
     <header>
       <nav>
-        {{#if activeUser.isAdmin}}
+        {{#if theUser.isAdmin}}
         <a href="/admin">Admin</a>
         {{/if}}
         <a href="/">Home</a>
