--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -23,7 +23,7 @@
 </label>
 <br>
 <label>
-  Prefered Language:
+  Preferred Language:
 <select data-placeholder="Choose a Language...">
   <option value="AF">Afrikanns</option>
   <option value="SQ">Albanian</option>
@@ -101,7 +101,7 @@
 </label>
 <br>
 <label>
-  Prefered Country:
+  Preferred Country:
   <select>
 	<option value="AF">Afghanistan</option>
 	<option value="AX">Åland Islands</option>
