--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -40,4 +40,7 @@ nav a {
   color: white;
   font-weight: 500; }
 
+.btn-outline-dark a:hover {
+  color: white; }
+
 /*# sourceMappingURL=style.css.map */
