--- a/views/auth/edit.hbs
+++ b/views/auth/edit.hbs
@@ -2,25 +2,21 @@
 <h2>Edit your profile</h2>
 
 <form action="/auth/edit" method="POST" id="form-container">
+<div class="form-group">
   <label for="username">Username</label>
-  <input id="username" type="text" name="username" placeholder="JonSnow" value="{{theUser.username}}">
-
-  <br><br>
-
-  <label>
-  Email
-  <input type="text" name="email" placeholder="something@whatever.com" value="{{theUser.email}}">
-  </label>
-  <br>
-
-  <label>
-  Nationality:
-  <input type="text" name="" placeholder="" value="{{theUser.nationality}}">
-</label>
-<br>
-<label>
-  Prefered Language:
-<select data-placeholder="Choose a Language..." value="{{theUser.prefered_Language}}">
+  <input id="username" type="text" name="username" placeholder="JonSnow" value="{{theUser.username}}" class="form-control">
+</div>
+<div class="form-group">
+  <label>Email</label>
+  <input type="text" name="email" placeholder="something@whatever.com" value="{{theUser.email}}" class="form-control">
+</div>
+<div class="form-group">
+  <label> Nationality:</label>
+  <input type="text" name="" placeholder="" value="{{theUser.nationality}}" class="form-control">
+</div>
+<div class="form-group">
+<label>Prefered Language:</label>
+<select data-placeholder="Choose a Language..." value="{{theUser.prefered_Language}}" class="form-control">
   <option value="AF">Afrikanns</option>
   <option value="SQ">Albanian</option>
   <option value="AR">Arabic</option>
@@ -94,11 +90,10 @@
   <option value="CY">Welsh</option>
   <option value="XH">Xhosa</option>
 </select>
-</label>
-<br>
-<label>
-  Prefered Country:
-  <select>
+</div>
+<div class="form-group">
+<label>Prefered Country:</label>
+  <select class="form-control">
 	<option value="AF">Afghanistan</option>
 	<option value="AX">Åland Islands</option>
 	<option value="AL">Albania</option>
@@ -349,7 +344,7 @@
 	<option value="ZM">Zambia</option>
 	<option value="ZW">Zimbabwe</option>
 </select>
-</label>
+
   {{#if message }}
     <div class="error-message">{{ message }}</div>
   {{/if}}
