--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -2,21 +2,22 @@
 <h2>Login</h2>
 
 <form action="/auth/login" method="POST" id="form-container">
+<div class="form-group">
   <label for="username">Username</label>
-  <input id="username" type="text" name="username" placeholder="JonSnow">
-
-  <br><br>
-
+  <input id="username" type="text" name="username" placeholder="JonSnow" class="form-control">
+</div>
+<div class="form-group">
   <label for="password">Password</label>
-  <input id="password" type="password" name="password" placeholder="Your password">
-  <br>
+  <input id="password" type="password" name="password" placeholder="Your password" class="form-control">
+</div>
+
   {{#if message }}
     <div class="error-message">{{ message }}</div>
   {{/if}}
 
-  <br><br>
 
-  <button class="btn btn-outline-dark"></button>>Login</button>
+
+  <button class="btn btn-outline-dark">Login</button>
 
   <p class="account-message">
     Don't have an account yet?
