finished admin, country creation list, users list, profile, created sub-folders and sub-pages, linked everything together

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,7 +14,7 @@
     <nav>
       <ul class="nav justify-content-center">
         {{#if theUser.isAdmin}}
-        <li>
+        <li class="nav-item">
           <a href="/admin" class="nav-item">Admin</a>
         </li>
         {{/if}}
