--- a/views/auth/account-details.hbs
+++ b/views/auth/account-details.hbs
@@ -4,3 +4,4 @@
 
 
 <button class="btn btn-outline-dark"><a href="/auth/edit">Edit your profile</a></button>
+<button class="btn btn-outline-dark"><a href="/auth/edit-password">Edit your password</a></button>
