country choice changes

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -33,9 +33,15 @@ nav a {
   top: 30px;
   left: 1155px; }
 
+.btn-country {
+  position: fixed;
+  top: 30px;
+  left: 30px; }
+
 .btns-login button {
   margin: 2px; }
 
+.btn-country a,
 .btns-login a {
   color: white;
   font-weight: 500; }
