--- a/views/auth/countries.hbs
+++ b/views/auth/countries.hbs
@@ -1,101 +1,7 @@
- <!-- views/auth/signup.hbs -->
-<h2>Edit your profile</h2>
-
-<form action="/auth/edit" method="POST" id="form-container">
-<div class="form-group">
-  <label for="username">Username</label>
-  <input id="username" type="text" name="username" placeholder="JonSnow" value="{{theUser.username}}" class="form-control">
-</div>
-<div class="form-group">
-  <label>Email</label>
-  <input type="text" name="email" placeholder="something@whatever.com" value="{{theUser.email}}" class="form-control">
-</div>
-<div class="form-group">
-  <label> Nationality:</label>
-  <input type="text" name="nationality" placeholder="Your nationality" value="{{theUser.nationality}}" class="form-control">
-</div>
-<div class="form-group">
-<label>Prefered Language:</label>
-<select data-placeholder="Choose a Language..." class="form-control" name="prefered_Language">
-  <option value="{{theUser.prefered_Language}}" selected>Default</option>
-  <option value="AF">Afrikanns</option>
-  <option value="SQ">Albanian</option>
-  <option value="AR">Arabic</option>
-  <option value="HY">Armenian</option>
-  <option value="EU">Basque</option>
-  <option value="BN">Bengali</option>
-  <option value="BG">Bulgarian</option>
-  <option value="CA">Catalan</option>
-  <option value="KM">Cambodian</option>
-  <option value="ZH">Chinese (Mandarin)</option>
-  <option value="HR">Croation</option>
-  <option value="CS">Czech</option>
-  <option value="DA">Danish</option>
-  <option value="NL">Dutch</option>
-  <option value="EN">English</option>
-  <option value="ET">Estonian</option>
-  <option value="FJ">Fiji</option>
-  <option value="FI">Finnish</option>
-  <option value="FR">French</option>
-  <option value="KA">Georgian</option>
-  <option value="DE">German</option>
-  <option value="EL">Greek</option>
-  <option value="GU">Gujarati</option>
-  <option value="HE">Hebrew</option>
-  <option value="HI">Hindi</option>
-  <option value="HU">Hungarian</option>
-  <option value="IS">Icelandic</option>
-  <option value="ID">Indonesian</option>
-  <option value="GA">Irish</option>
-  <option value="IT">Italian</option>
-  <option value="JA">Japanese</option>
-  <option value="JW">Javanese</option>
-  <option value="KO">Korean</option>
-  <option value="LA">Latin</option>
-  <option value="LV">Latvian</option>
-  <option value="LT">Lithuanian</option>
-  <option value="MK">Macedonian</option>
-  <option value="MS">Malay</option>
-  <option value="ML">Malayalam</option>
-  <option value="MT">Maltese</option>
-  <option value="MI">Maori</option>
-  <option value="MR">Marathi</option>
-  <option value="MN">Mongolian</option>
-  <option value="NE">Nepali</option>
-  <option value="NO">Norwegian</option>
-  <option value="FA">Persian</option>
-  <option value="PL">Polish</option>
-  <option value="PT">Portuguese</option>
-  <option value="PA">Punjabi</option>
-  <option value="QU">Quechua</option>
-  <option value="RO">Romanian</option>
-  <option value="RU">Russian</option>
-  <option value="SM">Samoan</option>
-  <option value="SR">Serbian</option>
-  <option value="SK">Slovak</option>
-  <option value="SL">Slovenian</option>
-  <option value="ES">Spanish</option>
-  <option value="SW">Swahili</option>
-  <option value="SV">Swedish </option>
-  <option value="TA">Tamil</option>
-  <option value="TT">Tatar</option>
-  <option value="TE">Telugu</option>
-  <option value="TH">Thai</option>
-  <option value="BO">Tibetan</option>
-  <option value="TO">Tonga</option>
-  <option value="TR">Turkish</option>
-  <option value="UK">Ukranian</option>
-  <option value="UR">Urdu</option>
-  <option value="UZ">Uzbek</option>
-  <option value="VI">Vietnamese</option>
-  <option value="CY">Welsh</option>
-  <option value="XH">Xhosa</option>
-</select>
-</div>
+<form action="/auth/countries" method="POST">
 <div class="form-group">
 <label>Prefered Country:</label>
   <select class="form-control" name="prefered_country">
-  <option value="{{theUser.prefered_country}}" selected>Default</option>
 	<option value="AF">Afghanistan</option>
 	<option value="AX">Åland Islands</option>
 	<option value="AL">Albania</option>
@@ -346,13 +252,6 @@
 	<option value="ZM">Zambia</option>
 	<option value="ZW">Zimbabwe</option>
 </select>
-</div>
-  {{#if message }}
-    <div class="error-message">{{ message }}</div>
-  {{/if}}
-
-  <br><br>
-
-  <button class="btn btn-outline-dark">Edit account</button>
-
+<br>
+ <button class="btn btn-outline-dark">Choose country</button>
 </form>
