--- a/views/admin/country-form.hbs
+++ b/views/admin/country-form.hbs
@@ -1,6 +1,6 @@
 <h2>Add Country</h2>
 
-<form action="/process-country" method="POST" id="form-container" enctype="multipart/form-data">
+<form action="/admin/process-country" method="POST" id="form-container" enctype="multipart/form-data">
   <label for="name">name</label>
   <input id="name" type="text" name="name" placeholder="Country Name">
 
@@ -25,15 +25,15 @@
 
   <label>
   Upload Picture:
-  <input type="file" name="picture">
+  <input type="file" name="imageFile">
   </label>
 
   <br>
 
   <label>
   Upload Video:
-  <input type="file" name="video"> 
+  <input type="file" name="videoFile"> 
   </label>
 
-
+<button>submit</button>
 </form> 
