--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,7 @@
 body {
   padding: 30px;
   font-family: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background: url("../images/background-pic.jpg") no-repeat center center fixed;
+  background: url("../images/bak5.jpeg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -24,7 +24,7 @@ nav {
   padding: 0% 3%; }
 
 nav a {
-  font-size: 3.5vh;
+  font-size: 2.5vh;
   color: black;
   font-weight: 600; }
 
