--- a/views/admin/country-form.hbs
+++ b/views/admin/country-form.hbs
@@ -1,39 +1,33 @@
 <h2>Add Country</h2>
 
 <form action="/admin/process-country" method="POST" id="form-container" enctype="multipart/form-data">
-  <label for="name">name</label>
-  <input id="name" type="text" name="name" placeholder="Country Name">
+  <div class="form-group">
+    <label for="name">Name</label>
+    <input id="name" type="text" name="name" placeholder="Country Name" class="form-control">
+  </div>
+  <div class="form-group">
+    <label for="description">Description</label>
+    <textarea name="description" id="description" cols="30" rows="10" class="form-control"></textarea>
+  </div>
+  <div class="form-group">
+    <label>Language</label>
+    <input type="text" name="language" placeholder="languge" class="form-control">
+  </div>
+  <div class="form-group">
+    <label>Currency:</label>
+    <input type="text" name="currency" placeholder="Currency" class="form-control">
+  </div>
+  <div class="form-group" class="form-control">
+    <label>
+      Upload Picture:</label>
+    <input type="file" name="imageFile" class="form-control">
 
-  <br>
+  </div>
+  <div class="form-group">
+    <label>
+      Upload Video:</label>
+    <input type="file" name="videoFile" class="form-control">
+  </div>
 
-  <label for="description">Description</label>
-  <textarea name="description" id="description" cols="30" rows="10"></textarea>
-  
-  <br>
-
-  <label>
-  Language
-  <input type="text" name="language" placeholder="languge">
-  </label>
-  <br>
-
-  <label>
-  Currency:
-  <input type="text" name="currency" placeholder="Currency">
-  </label>
-  <br>
-
-  <label>
-  Upload Picture:
-  <input type="file" name="imageFile">
-  </label>
-
-  <br>
-
-  <label>
-  Upload Video:
-  <input type="file" name="videoFile"> 
-  </label>
-
-<button>submit</button>
-</form> 
+  <button class="btn btn-outline-dark">Submit</button>
+</form>
