--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,7 +11,6 @@
 
 <body>
   <header>
-    
     <nav>
       <ul class="nav justify-content-center">
         <li class="nav-item">
@@ -28,46 +27,35 @@
         </li>
       </ul>
     </nav>
-    
-      {{#if theUser}}
-      {{#if theUser.isAdmin}}
-        <button class="btn float-right btn-info"><a href="/admin">Admin</a></button>
-          {{/if}}
-      <div class="float-right">
-        <button class="btn btn-info">
-          <a href="/auth/change-country">Change country</a>
-        </button>
-      </div>
-      <div class="float-right">
-        <button class="btn btn-info">
-          <a href="/auth/account-details">See your profile</a>
-        </button>
-      </div>
-      <div class="float-right">
-        <button class="btn btn-info">
-          <a href="/auth/logout">Log out</a>
-        </button>
-      </div>
-      
-      {{else}}
-      <div class="float-right">
-        <button class="btn btn-info">
-          <a href="/auth/signup">Sign Up</a>
-        </button>
-      </div>
-      <div class="float-right">
-        <button class="btn btn-info">
-          <a href="/auth/login">Log in</a>
-        </button>
+    <div class="btn-group float-right">
+      <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Your Account
+      </button>
+      <div class="dropdown-menu">
+        {{#if theUser}} 
+        {{#if theUser.isAdmin}}
+        <a href="/admin" class="dropdown-item">Admin</a>
+        {{/if}}
+        <a href="/auth/change-country" class="dropdown-item">Change country</a>
+        <a href="/auth/account-details" class="dropdown-item">See your profile</a>
+        <div class="dropdown-divider"></div>
+        <a href="/auth/logout" class="dropdown-item">Log out</a>
+        {{else}}
+        <a href="/auth/signup" class="dropdown-item">Sign Up</a>
+        <a href="/auth/login" class="dropdown-item">Log in</a>
         {{/if}}
       </div>
     </div>
-
+    
   </header>
   <div class="cloud">
     {{{body}}}
   </div>
-
+  <script src="https://unpkg.com/tooltip.js/dist/umd/tooltip.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key={{mapKey}}"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src='/javascripts/script.js'></script>
