wednessday updates-- Fixed food-form, created medical page and form & linked them, added status to our Models to help with the admin control

--- a/views/sub-pages/medical-form.hbs
+++ b/views/sub-pages/medical-form.hbs
@@ -1,14 +1,14 @@
-<h2>Recommend a Resturant or a Place</h2>
+<h2>Recommend a Medical Place</h2>
 
 <form action="/process-resto" method="POST">
 <div class="form-group">
     <label for= "name" >Name:</label>
-    <input id="name" type="text" name="name" placeholder="Awesome Food..." class="form-control"/>
+    <input id="name" type="text" name="name" placeholder="Dr. clinic" class="form-control"/>
 </div>
 
 <div class="form-group">
     <label for="description">Description:</label>
-    <textarea id="description" name="description" cols="30" rows="6" placeholder="what makes this place unique..." class="form-control"></textarea>
+    <textarea id="description" name="description" cols="30" rows="6" placeholder="How can they help" class="form-control"></textarea>
 </div>
 
 <div class="form-group">
