fixed video, google api, created model

--- a/views/sub-pages/medical-form.hbs
+++ b/views/sub-pages/medical-form.hbs
@@ -1,6 +1,6 @@
 <h2>Recommend a Medical Place</h2>
 
-<form action="/process-resto" method="POST">
+<form action="/process-medic" method="POST">
 <div class="form-group">
     <label for= "name" >Name:</label>
     <input id="name" type="text" name="name" placeholder="Dr. clinic" class="form-control"/>
