transportation map appears

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -49,4 +49,8 @@ nav a {
 .btn-outline-dark a:hover {
   color: white; }
 
+.my-map {
+  height: 500px;
+  width: 100%; }
+
 /*# sourceMappingURL=style.css.map */
