--- a/views/auth/countries.hbs
+++ b/views/auth/countries.hbs
@@ -2,6 +2,7 @@
 <div class="form-group">
 <label>Prefered Country:</label>
   <select class="form-control" name="prefered_country">
+	<option value="{{theUser.prefered_country}}" selected>Default</option>
 	<option value="AF">Afghanistan</option>
 	<option value="AX">Åland Islands</option>
 	<option value="AL">Albania</option>
