--- a/views/sub-pages/foodmap.hbs
+++ b/views/sub-pages/foodmap.hbs
@@ -1,2 +1,11 @@
+<h1>List of food recomendations:</h1>
+<ul>
+{{#each restos}}
+<li>
+Name: {{this.name}}
+</li>
+{{/each}}
+</ul>
+
 
 <a href="/culture/food/add">Recommend Food</a>
