--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,7 +12,7 @@ a {
 
 .cloud {
   background-color: rgba(255, 255, 255, 0.8);
-  padding: 5% 15%;
+  padding: 3%;
   margin: 1% 15%;
   border-radius: 15px; }
 
@@ -51,6 +51,10 @@ nav a {
 
 .my-map {
   height: 500px;
+  width: 100%; }
+
+.foodmap {
+  height: 300px;
   width: 100%; }
 
 /*# sourceMappingURL=style.css.map */
