--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -14,7 +14,7 @@ a {
 
 .cloud{
   background-color: rgba(255, 255, 255, 0.8);
-  padding: 5% 15%;
+  padding: 3%;
   margin: 1% 15%;
   border-radius: 15px;
 }
@@ -61,5 +61,10 @@ nav a{
 
 .my-map{
   height: 500px;
+  width: 100%;
+}
+
+.foodmap{
+  height: 300px;
   width: 100%;
 }
