--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -39,6 +39,16 @@ nav a{
   left: 1155px;
 }
 
+.drop-login{
+  position: fixed;
+  top: 30px;
+  left: 1155px;
+}
+
+.drop-login-one{
+  margin: 2px;
+}
+
 .btn-country{
   position: fixed;
   top: 30px;
