--- a/views/sub-pages/food-form.hbs
+++ b/views/sub-pages/food-form.hbs
@@ -12,8 +12,8 @@
 </div>
 
 <div class="form-group">
-    <label for="address" >Location:</label>
-    <input id="address" type="text" placeholder="address..." class="location-input" class="form-control" /> 
+    <label for="address">Location:</label>
+    <input id="address" type="text" placeholder="address..." class="location-input form-control" /> 
 </div>
 
   <!-- these will be set by out Place Autocomplete -->
