--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -98,7 +98,7 @@
 	</div>
 	<div class="form-group">
 		<label>Prefered Country:</label>
-			<select class="form-control">
+			<select class="form-control" name="prefered_country">
 				<option value="AF">Afghanistan</option>
 				<option value="AX">Åland Islands</option>
 				<option value="AL">Albania</option>
