--- a/views/sub-pages/medical-form.hbs
+++ b/views/sub-pages/medical-form.hbs
@@ -23,4 +23,4 @@
   <button class="btn btn-outline-dark">Save This Restaurant</button>
 </form>
 
-<div class="my-map" style="display: none;"></div>
+<div class="my-map" id="map" style="display: none;"></div>
