--- a/views/sub-pages/videos.hbs
+++ b/views/sub-pages/videos.hbs
@@ -2,9 +2,23 @@
 
 {{#each showingVideo}}
 
-<video width="320" height="240" controls>
-
-  <source src="{{this.mediaFile}}" type="video/mp4">
+  <video
+    id="language"
+    class="video-js"
+    controls
+    preload="auto"
+    poster=""
+    data-setup='{}'>
+  <source src="{{this.mediaFile}}" type="video/mp4"></source>
+  <p class="vjs-no-js">
+    To view this video please enable JavaScript, and consider upgrading to a
+    web browser that
+    <a href="http://videojs.com/html5-video-support/" target="_blank">
+      supports HTML5 video
+    </a>
+  </p>
 </video>
+
 {{/each}}
+
 
