--- a/views/sub-pages/videos.hbs
+++ b/views/sub-pages/videos.hbs
@@ -8,7 +8,10 @@
     controls
     preload="auto"
     poster=""
-    data-setup='{}'>
+    data-setup='{}' 
+    width="300"
+    height="200">
+  
   <source src="{{this.mediaFile}}" type="video/mp4"></source>
   <p class="vjs-no-js">
     To view this video please enable JavaScript, and consider upgrading to a
