--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -69,12 +69,13 @@ nav a{
   color: white;
 }
 
-.my-map{
-  height: 500px;
+.trans-map{
+  height: 450px;
   width: 100%;
 }
 
-.foodmap{
+.foodmap,
+.medmap{
   height: 300px;
   width: 100%;
 }
