--- a/views/sub-pages/foodmap.hbs
+++ b/views/sub-pages/foodmap.hbs
@@ -24,7 +24,7 @@
                 {{/if}} {{/if}} {{/each}}
             </ul>
         </div>
-        <div class="foodmap col-7" id="map"></div>
+        <div class="foodmap col-7"></div>
     </div>
 </div>
 
