--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -57,11 +57,12 @@ nav a {
 .btn-outline-dark a:hover {
   color: white; }
 
-.my-map {
-  height: 500px;
+.trans-map {
+  height: 450px;
   width: 100%; }
 
-.foodmap {
+.foodmap,
+.medmap {
   height: 300px;
   width: 100%; }
 
