--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -44,6 +44,11 @@
           </div>
           </div>
         </li>
+        <li class="nav-item">
+          <div class="float-right nav-link">
+            Country: {{theUser.prefered_country}}
+          </div>
+        </li>
       </ul>
     </nav>
     <div class="drop-login">
@@ -74,6 +79,7 @@
         <a href="/auth/logout" class="dropdown-item">Log out</a>
       </div>
     </div>
+    
     </div>
     {{else}}
     <div class="float-right btns-login">
@@ -97,6 +103,8 @@
   <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key={{mapKey}}"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src='/javascripts/script.js'></script>
+  <script src='/javascripts/med-map.js'></script>
+  <script src='/javascripts/transportation.js'></script>
 </body>
 
 </html>
