--- a/views/sub-pages/medical-form.hbs
+++ b/views/sub-pages/medical-form.hbs
@@ -13,7 +13,7 @@
 
 <div class="form-group">
     <label for="address" >Location:</label>
-    <input id="address" type="text" placeholder="address..." class="location-input" class="form-control" /> 
+    <input id="address" type="text" placeholder="address..." class="location-inpu form-control" /> 
 </div>
 
   <!-- these will be set by out Place Autocomplete -->
