--- a/views/sub-pages/medical.hbs
+++ b/views/sub-pages/medical.hbs
@@ -26,7 +26,7 @@
                 {{/if}} {{/if}} {{/each}}
             </ul>
         </div>
-        <div class="foodmap col-7" id="map"></div>
+        <div class="medmap col-7"></div>
     </div>
 </div>
 
