Secnon day deployment

--- a/views/admin/admin.hbs
+++ b/views/admin/admin.hbs
@@ -1,6 +1,6 @@
 <h2>Admin Zone</h2>
 
-<a href="/admin/add-country">Add Country</a>
+<a href="/admin/country-list">Country List</a>
 <br>
 <a href="/admin/user-list">User List</a>
 
