--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,8 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
+
+<br>
+<br>
+
+{{!-- <p>We understand moving to a new city can be difficult and we are here to provide you with all the help we can</p>
+<p>We are trying to create a platform were users will be able to recommend the best places in their towns</p> --}}
