--- a/views/sub-pages/foodmap.hbs
+++ b/views/sub-pages/foodmap.hbs
@@ -1,5 +1,9 @@
 <div class="container-fluid">
     <h4>List of food recomendations:</h4>
+    <br>
+    <a href="/culture/food/add">Recommend Food</a>
+    <br>   
+    <br> 
     <div class='row'>
         <div class="col-5">
             <ul class="list-group">
@@ -30,4 +34,4 @@
 
 
 
-<a href="/culture/food/add">Recommend Food</a>
+{{!-- <a href="/culture/food/add">Recommend Food</a> --}}
