--- a/views/sub-pages/food-form.hbs
+++ b/views/sub-pages/food-form.hbs
@@ -7,6 +7,11 @@
 </div>
 
 <div class="form-group">
+    <label for= "type" >Type of Place:</label>
+    <input id="type" type="text" name="type" placeholder="resturant, shop, area..." class="form-control"/>
+</div>
+
+<div class="form-group">
     <label for="description">Description:</label>
     <textarea id="description" name="description" cols="30" rows="6" placeholder="what makes this place unique..." class="form-control"></textarea>
 </div>
