--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -45,9 +45,9 @@
           </div>
         </li>
         <li class="nav-item">
-          <div class="float-right nav-link">
+          {{!-- <div class="float-right nav-link">
             Country: {{theUser.prefered_country}}
-          </div>
+          </div> --}}
         </li>
       </ul>
     </nav>
