finihsed medical form and addition

--- a/views/sub-pages/food-form.hbs
+++ b/views/sub-pages/food-form.hbs
@@ -28,4 +28,4 @@
   <button class="btn btn-outline-dark">Save This Restaurant</button>
 </form>
 
-<div class="my-map" id="map" style="display: none;"></div>
+<div class="foodmap" style="display: none;"></div>
