--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -66,4 +66,8 @@ nav a {
   height: 300px;
   width: 100%; }
 
+.custom {
+  margin: 2px;
+  width: 100%; }
+
 /*# sourceMappingURL=style.css.map */
