--- a/views/sub-pages/transport.hbs
+++ b/views/sub-pages/transport.hbs
@@ -1,16 +1,38 @@
-<form>
-    <div class="form-group">
-        <label for="address">From:</label>
-        <input id="address" type="text" placeholder="" class="location-input form-control" />
-    </div>
-    <div class="form-group">
-        <label for="address">To:</label>
-        <input id="address" type="text" placeholder="" class="location-input form-control" />
-    </div>
+<div class="container">
+    <div class="row">
+        <div class="col-3">
+            <forms>
+                <div class="form-group">
+                    <label for="address">From:</label>
+                    <input id="address" type="text" placeholder="" class="location-inputF form-control" />
+                    <button id="current" class="btn btn-secondary custom">Current</button>
+                </div>
+                <input type="hidden" name="latitude" class="lat-inputF" />
+                <input type="hidden" name="longitude" class="lng-inputF" />
 
-    <!-- these will be set by out Place Autocomplete -->
-    <input type="hidden" name="latitude" class="lat-input" />
-    <input type="hidden" name="longitude" class="lng-input" />
-<button class="route">Search</button>
-</form>
-<div class="trans-map" width="10" heigth="10"></div>
+                <div class="form-group">
+                    <label for="address">To:</label>
+                    <input id="address" type="text" placeholder="" class="location-inputT form-control" />
+                </div>
+                <div class="form-group">
+                    <label>
+                        Mode:
+                    </label>
+                <select id="mode" class="form-control">
+                    <option value="DRIVING">Driving</option>
+                    <option value="WALKING">Walking</option>
+                    <option value="BICYCLING">Bicycling</option>
+                    <option value="TRANSIT">Transit</option>
+                </select>
+                </div>
+                <!-- these will be set by out Place Autocomplete -->
+                <input type="hidden" name="latitude" class="lat-inputT" />
+                <input type="hidden" name="longitude" class="lng-inputT" />
+                </form>
+                <button class="route btn btn-info custom">Search</button>
+        </div>
+        <div class="col-9">
+            <div class="trans-map" width="10" heigth="10"></div>
+        </div>
+    </div>
+</div>
