finished maps with location change and everything

--- a/views/sub-pages/transport.hbs
+++ b/views/sub-pages/transport.hbs
@@ -13,4 +13,4 @@
     <input type="hidden" name="longitude" class="lng-input" />
 <button class="route">Search</button>
 </form>
-<div class="trans-map" width="10" heigth="10"></div>
+<div class="trans-map maap" width="10" heigth="10"></div>
