--- a/views/admin/single-country.hbs
+++ b/views/admin/single-country.hbs
@@ -1,6 +1,6 @@
-<h2>{{this.name}}</h2>
+<h2>{{dataCountry.name}}</h2>
 
-<form action="/admin/edit/process-country" method="POST" id="form-container" enctype="multipart/form-data">
+<form action="/admin/edit/{{dataCountry._id}}/process-country" method="POST" id="form-container" enctype="multipart/form-data">
   
   	<div class="form-group">
 		<label>Prefered Country:</label>
