--- a/views/sub-pages/foodmap.hbs
+++ b/views/sub-pages/foodmap.hbs
@@ -1,3 +1,14 @@
+
+{{!-- <script>
+      function toggleBounce() {
+        if (marker.getAnimation() !== null) {
+          marker.setAnimation(null);
+        } else {
+          marker.setAnimation(google.maps.Animation.BOUNCE);
+        }
+      }
+</script> --}}
+
 <div class="container-fluid">
     <h4>List of food recomendations:</h4>
     <br>
@@ -8,11 +19,12 @@
         <div class="col-5">
             <ul class="list-group">
                 {{#each restos}} {{#if ../theUser.isAdmin}}
-                <li class="list-group-item marker">
+                <li class="list-group-item marker li-{{this._id}}">
                     <p>{{this.name}} </p>
                     <p>{{this.type}}</p>
                     <p> {{this.description}}</p>
                     {{#if this.InActive}}
+                    
                     <button>
                         <a href="/food/{{this._id}}/accept">Accept</a>
                     </button>
