--- a/views/sub-pages/medical.hbs
+++ b/views/sub-pages/medical.hbs
@@ -11,7 +11,7 @@
         <div class="col-5">
             <ul class="list-group">
                 {{#each medics}} {{#if ../theUser.isAdmin}}
-                <li class="list-group-item marker">
+                <li class="list-group-item marker lii-{{this._id}}">
                     <p> {{this.name}}</p>
                     <p> {{this.type}}</p>
                     <p> {{this.description}}</p>
@@ -33,7 +33,7 @@
                 {{/if}} {{/if}} {{/each}}
             </ul>
         </div>
-        <div class="medmap col-7"></div>
+        <div class = "medmap col-7"></div>
     </div>
 </div>
 
