--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,14 +29,14 @@ nav a {
   font-weight: 600; }
 
 .btns-login {
-  position: fixed;
-  top: 30px;
-  left: 1155px; }
+  position: relative;
+  bottom: 30px;
+  left: 30px; }
 
 .drop-login {
-  position: fixed;
-  top: 30px;
-  left: 1155px; }
+  position: relative;
+  left: 30px;
+  bottom: 30px; }
 
 .drop-login-one {
   margin: 2px; }
@@ -46,9 +46,11 @@ nav a {
   top: 30px;
   left: 30px; }
 
-.btns-login button {
+.btns-login button,
+.btn-admin {
   margin: 2px; }
 
+.btn-admin a,
 .btn-country a,
 .btns-login a {
   color: white;
