--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,8 +1,10 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
-
-<br>
-<br>
+<div class="jumbotron">
+  <h1 class="display-4">Hello, world!</h1>
+  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+  <hr class="my-4">
+  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+  
+</div>
 
 {{!-- <p>We understand moving to a new city can be difficult and we are here to provide you with all the help we can</p>
 <p>We are trying to create a platform were users will be able to recommend the best places in their towns</p> --}}
