--- a/views/sub-pages/foodmap.hbs
+++ b/views/sub-pages/foodmap.hbs
@@ -1,35 +1,37 @@
-
-{{!-- <script>
-      function toggleBounce() {
+ {{!--
+<script>
+    function toggleBounce() {
         if (marker.getAnimation() !== null) {
-          marker.setAnimation(null);
+            marker.setAnimation(null);
         } else {
-          marker.setAnimation(google.maps.Animation.BOUNCE);
+            marker.setAnimation(google.maps.Animation.BOUNCE);
         }
-      }
+    }
 </script> --}}
 
 <div class="container-fluid">
     <h4>List of food recomendations:</h4>
     <br>
-    <a href="/culture/food/add">Recommend Food</a>
-    <br>   
-    <br> 
+    <button type="button" class="btn btn-outline-secondary recommend">
+        <a href="/culture/food/add">Recommend Food</a>
+    </button>
+    <br>
+    <br>
     <div class='row'>
         <div class="col-5">
             <ul class="list-group">
                 {{#each restos}} {{#if ../theUser.isAdmin}}
                 <li class="list-group-item marker li-{{this._id}}">
-                    <p>{{this.name}} </p>
-                    <p>{{this.type}}</p>
-                    <p> {{this.description}}</p>
+                    <h4 class="rec-name">{{this.name}} </h4>
+                    <h6 class="rec-type">{{this.type}}</h6>
+                    <p class="rec-des"> {{this.description}}</p>
                     {{#if this.InActive}}
-                    
-                    <button>
+
+                    <button class="btn btn-success btn-admin btn-sm">
                         <a href="/food/{{this._id}}/accept">Accept</a>
                     </button>
                     {{/if}}
-                    <button>
+                    <button class="btn btn-danger btn-admin btn-sm">
                         <a href="/food/{{this._id}}/delete">Delete</a>
                     </button>
                 </li>
@@ -48,4 +50,5 @@
 
 
 
-{{!-- <a href="/culture/food/add">Recommend Food</a> --}}
+{{!--
+<a href="/culture/food/add">Recommend Food</a> --}}
