--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,14 +29,14 @@ nav a {
   font-weight: 600; }
 
 .btns-login {
-  position: relative;
-  bottom: 30px;
-  left: 30px; }
+  position: absolute;
+  top: 15px;
+  right: 15px; }
 
 .drop-login {
-  position: relative;
-  left: 30px;
-  bottom: 30px; }
+  position: absolute;
+  top: 20px;
+  right: 15px; }
 
 .drop-login-one {
   margin: 2px; }
