--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -34,15 +34,15 @@ nav a{
 }
 
 .btns-login{
-  position: relative;
-  bottom: 30px;
-  left: 30px;
+  position: absolute;
+  top: 15px;
+  right: 15px;
 }
 
 .drop-login{
-  position: relative;
-  left: 30px;
-  bottom: 30px;
+  position: absolute;
+  top: 20px;
+  right: 15px;
 }
 
 .drop-login-one{
