--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -66,7 +66,7 @@
       </div>
     </div>
     {{/if}}
-    {{#if theUser}}
+    {{#if theUser}}<br>
     <div class="btn-group float-right drop-login-one">
       <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Your Account
