--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -36,17 +36,17 @@ nav a{
 .btns-login{
   position: absolute;
   top: 15px;
-  right: 15px;
+  right: 2%;
 }
 
 .drop-login{
   position: absolute;
   top: 20px;
-  right: 15px;
+  right: 3%;
 }
 
 .drop-login-one{
-  margin: 2px;
+  margin: 3px;
 }
 
 .btn-country{
