--- a/views/auth/account-details.hbs
+++ b/views/auth/account-details.hbs
@@ -1,7 +1,9 @@
 <h1>Hi, {{theUser.username}}!</h1>
+<h5><strong>Your e-mail:</strong> {{theUser.e-mail}}</h5>
+<h5><strong>Chosen country:</strong> {{theUser.preferred_country}}</h5>
+<h5><strong>Nationality:</strong> {{theUser.nationality}}</h5>
+<h5><strong>On our website you are: </strong> {{theUser.role}}</h5>
 
 
-
-
-<button class="btn btn-outline-dark"><a href="/auth/edit">Edit your profile</a></button>
-<button class="btn btn-outline-dark"><a href="/auth/edit-password">Edit your password</a></button>
+<button class="btn btn-outline-secondary recommend"><a href="/auth/edit">Edit your profile</a></button>
+<button class="btn btn-outline-secondary recommend"><a href="/auth/edit-password">Edit your password</a></button>
