--- a/views/admin/countries-list.hbs
+++ b/views/admin/countries-list.hbs
@@ -1,34 +1,64 @@
 <h2>Countries List</h2>
-
+<button class="btn btn-warning float-right btn-admin">
 <a href="/admin/add-country">Add Country</a>
+</button>
 
 <br>
 <br>
 
-<div class="container-fluid">
+<div class="admin-users">
     {{!-- <h4>List of Countries:</h4> --}}
-    <div class='row'>
-        <div class="col-12">
-            <ul class="list-group">
+
+            <ul class="list-group list">
                 {{#each countryList}} {{#if ../theUser.isAdmin}}
-                <li class="list-group-item marker">
-                    {{this.name}}
-                    <p> {{this.description}}</p>
-                    <p>{{this.value}}</p>
-                     <p>{{this.language}}</p>
-                     <p>{{this.currency}}</p>
-                     <p>{{this.pictureUrl}}</p>
-                     <p>{{this.videos}}</p>
-                    
-                    <button>
+                <li class="list-group-item">
+                    <h3 class="rec-name"><i>{{this.name}}</i></h3>
+                     <ul class="users-li">
+                        <li class="rec-type"><strong>Email:</strong> {{this.description}} </li>
+                        <li class="rec-type"><strong>Value:</strong> {{this.value}} </li>
+                        <li class="rec-type"><strong>Language:</strong> {{this.language}} </li>
+                        <li class="rec-type"><strong>Currency:</strong> {{this.currency}} </li>
+                                                                     
+                        
+                    </ul>  
+                    <button class="btn btn-warning float-right btn-admin">
                         <a href="/admin/country-list/{{this._id}}/change">Update</a>
                     </button>
                     
-                    <button>
+                    <button class="btn btn-danger float-right btn-admin">
                         <a href="/admin/country-list/{{this._id}}/delete">Delete</a>
                     </button>
                 </li>
                  {{/if}} {{/each}}
             </ul>
-        </div>
+    
+</div>
+
+
+<div class="admin-users">
+<ul class="list-group list">
+  {{#each userList}}
+  <li class="list-group-item">
+    {{#if ../theUser.isAdmin }}
+    <h3 class="rec-name"><i>{{this.username}}</i></h3>
+    <ul class="users-li">
+      <li class="rec-type"><strong>Email:</strong> {{this.email}} </li>
+      <li class="rec-type"><strong>Role:</strong> {{this.role}} </li>
+    </ul>
+    {{#if this.isntAdmin}}
+    <button class="btn btn-danger float-right btn-admin">
+      <a href="/admin/users/{{this._id}}/delete">Remove User</a>
+    </button>
+    <button class="btn btn-warning float-right btn-admin">
+      <a href="/admin/users/{{this._id}}/makeadmin" >Make Admin</a>
+    </button>
+    {{else}}
+    <button class="btn btn-warning float-right btn-admin">
+      <a href="/admin/users/{{this._id}}/unmakeadmin" >Make User</a>
+    </button>
+    {{/if}} 
+    {{/if}}
+  </li>
+  {{/each}}
+</ul>
 </div>
