--- a/views/sub-pages/medical-form.hbs
+++ b/views/sub-pages/medical-form.hbs
@@ -8,7 +8,7 @@
 
 <div class="form-group">
     <label for= "type" >Type of Place:</label>
-    <input id="type" type="text" name="type" placeholder="Hopspital, clinic, Private Doctor..." class="form-control"/>
+    <input id="type" type="text" name="type" placeholder="Hospital, clinic, Private Doctor..." class="form-control"/>
 </div>
 
 <div class="form-group">
