Fixing spelling mistakes

--- a/views/sub-pages/foodmap.hbs
+++ b/views/sub-pages/foodmap.hbs
@@ -10,7 +10,7 @@
 </script> --}}
 
 <div class="container-fluid">
-    <h4>List of food recomendations:</h4>
+    <h4>List of food recommandation:</h4>
     <br>
     <button type="button" class="btn btn-outline-secondary recommend">
         <a href="/culture/food/add">Recommend Food</a>
