--- a/views/sub-pages/medical.hbs
+++ b/views/sub-pages/medical.hbs
@@ -1,7 +1,7 @@
 
 
 <div class="container-fluid">
-    <h4>List of medical recomendations:</h4>
+    <h4>List of medical recommandation:</h4>
     <br>
     <button type="button" class="btn btn-outline-secondary recommend">
     <a href="/get-started/medicalInfo/add">Recommend Medical Place</a></button>
