--- a/views/sub-pages/food-form.hbs
+++ b/views/sub-pages/food-form.hbs
@@ -1,4 +1,4 @@
-<h2>Recommend a Resturant or a Place</h2>
+<h2>Recommend a Restaurant or a Place</h2>
 
 <form action="/process-resto" method="POST">
 <div class="form-group">
